--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpack-watched-glob-entries-plugin": "^2.2.4"
   },
   "dependencies": {}
 }
